syntax="proto3";

package LearningGoProjects.ResourceMonitor;

option go_package = "./;pb";

message Memory {

  uint64 total = 3;
  uint64 available = 4;
  uint64 used = 5;
  double usedPercent = 6;
  uint64 free = 7;
  uint64 active = 8;


  enum Unit {
    UNKNOWN = 0;
    BIT = 1;
    BYTE = 2;
    KILOBYTE = 3;
    MEGABYTE = 4;
    GIGABYTE = 5;
    TERABYTE = 6;
  }

  uint64 value = 1;
  Unit unit = 2;
}
