syntax="proto3";

package LearningGoProjects.ResourceMonitor;

option go_package = ".;pb";

import "processors_message.proto";
import "memory_message.proto";


message GetProcessorsRequest{};

message GetProcessorsResponse{
  CPU cpu = 1;
  GPU gpu = 2;


};

service ProcessorsService {
  rpc GetProcessorsInfo(GetProcessorsRequest) returns (GetProcessorsResponse){};

}

message GetMemoryRequest{};

message GetMemoryResponse{};

service MemoryService {
  rpc GetMemoryInfo(GetMemoryRequest) returns (GetMemoryResponse){};

}